# qwen3-3b-nsfw

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TRAINING_GUIDE.md  budget.json  cliff.toml  commitlint.config.js  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_start.sh  renovate.json  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-assign.yml  auto-merge.yml  changelog.yml  ci.yml  codecov.yml  codeql.yml  commitlint.yml  dependency-review.yml  docker.yml  first-issue.yml  greetings.yml  labeler.yml  lock.yml  milestone.yml  pages.yml  performance.yml  preview.yml  project.yml  release.yml  renovate.yml  scorecard.yml  semantic.yml  sentry.yml  size.yml  stale.yml  todo.yml  zap.yml
.zap/: rules.tsv
configs/: full_finetune_config.yaml  lora_config.yaml
data/: train.jsonl
scripts/: evaluate.py  inference.py  monitor.py  preprocess_data.py  run.sh  test_environment.py  train.py
tests/: __init__.py  test_preprocess.py
utils/: __init__.py  data_collator.py  metrics.py
