[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qwen3-3b-nsfw"
version = "0.1.0"
description = "Qwen3-3B NSFW 微调项目"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "YGTT", email = "your-email@example.com"},
]
keywords = ["qwen3", "nsfw", "fine-tuning", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.24.0",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/your-username/qwen3-3b-nsfw"
Documentation = "https://github.com/your-username/qwen3-3b-nsfw#readme"
Repository = "https://github.com/your-username/qwen3-3b-nsfw"
Issues = "https://github.com/your-username/qwen3-3b-nsfw/issues"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true