[metadata]
name = qwen3-3b-nsfw
version = 0.1.0
description = Qwen3-3B NSFW 微调项目
author = YGTT
author_email = your-email@example.com
license = MIT
url = https://github.com/your-username/qwen3-3b-nsfw

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.0.0
    transformers>=4.35.0
    peft>=0.6.0
    datasets>=2.14.0
    accelerate>=0.24.0
    bitsandbytes>=0.41.0
    scipy>=1.11.0
    sentencepiece>=0.1.99
    protobuf>=4.24.0
    tensorboard>=2.14.0
    scikit-learn>=1.3.0
    numpy>=1.24.0
    pandas>=2.0.0
    tqdm>=4.65.0
    pyyaml>=6.0.0
    einops>=0.7.0

[options.extras_require]
dev =
    black>=23.7.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.5.1
    pre-commit>=3.3.0
    pytest>=7.4.0
    pytest-cov>=4.1.0

[options.packages.find]
where = .

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[black]
line-length = 120
target-version = py310

[isort]
profile = black
line_length = 120

[mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true